bugfixes in siple crud operations'
