# packages/api-sdk/openapi.json
@@ -116,7 +116,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/UserBody"
+                "$ref": "#/components/schemas/UpdateUserBody"
               }
             }
           }
@@ -212,7 +212,7 @@
         },
         "responses": {
           "201": {
-            "description": "User created successfully",
+            "description": "Product created successfully",
             "content": {
               "application/json": {
                 "schema": {
@@ -270,6 +270,99 @@
           "Product"
         ]
       }
+    },
+    "/api/products/{id}": {
+      "get": {
+        "operationId": "getProduct",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "security": [
+          {
+            "x-auth": []
+          }
+        ],
+        "summary": "get one product by id",
+        "tags": [
+          "Product"
+        ]
+      },
+      "patch": {
+        "operationId": "updateProduct",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/ProductBody"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        },
+        "security": [
+          {
+            "x-auth": []
+          }
+        ],
+        "summary": "Update a product",
+        "tags": [
+          "Product"
+        ]
+      },
+      "delete": {
+        "operationId": "deleteProduct",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": ""
+          }
+        },
+        "security": [
+          {
+            "x-auth": []
+          }
+        ],
+        "summary": "Delete product by id",
+        "tags": [
+          "Product"
+        ]
+      }
     }
   },
   "info": {
@@ -295,6 +388,9 @@
           "name": {
             "type": "string"
           },
+          "surname": {
+            "type": "string"
+          },
           "email": {
             "type": "string"
           },
@@ -304,6 +400,7 @@
         },
         "required": [
           "name",
+          "surname",
           "email",
           "password"
         ]
@@ -318,6 +415,9 @@
           "name": {
             "type": "string"
           },
+          "surname": {
+            "type": "string"
+          },
           "email": {
             "type": "string"
           }
@@ -325,8 +425,23 @@
         "required": [
           "id",
           "name",
+          "surname",
           "email"
         ]
+      },
+      "UpdateUserBody": {
+        "type": "object",
+        "properties": {
+          "name": {
+            "type": "string"
+          },
+          "email": {
+            "type": "string"
+          },
+          "password": {
+            "type": "string"
+          }
+        }
       },
       "LoginBody": {
         "type": "object",
@@ -364,13 +479,19 @@
           "name": {
             "type": "string"
           },
-          "expiresAt": {
+          "size": {
+            "type": "number"
+          },
+          "ownerId": {
+            "type": "string"
+          },
+          "fridgeId": {
             "type": "string"
           }
         },
         "required": [
           "name",
-          "expiresAt"
+          "size"
         ]
       },
       "ProductView": {
@@ -383,14 +504,20 @@
           "name": {
             "type": "string"
           },
-          "expiresAt": {
+          "size": {
+            "type": "number"
+          },
+          "ownerId": {
+            "type": "string"
+          },
+          "fridgeId": {
             "type": "string"
           }
         },
         "required": [
           "id",
           "name",
-          "expiresAt"
+          "size"
         ]
       }
     }
